--- a/view/package.json
+++ b/view/package.json
@@ -12,6 +12,7 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-bootstrap-range-slider": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-router-dom": "^5.2.0",
