--- a/view/package.json
+++ b/view/package.json
@@ -16,8 +16,10 @@
     "react-bootstrap-range-slider": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "sweetalert2": "^11.0.12",
     "sweetalert2-react-content": "^4.0.1",
     "web-vitals": "^1.0.1"
